src/other/mico-2.3.12/test/idl/error/case6.idl

/*
 * Union with mismatching discriminator types.
 */

union U switch(char)
{
  case TRUE: long x;
};
